FIX: rmeoved gutters from nav rows to fix alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,5 +67,5 @@ header {
 
 #nav li {
   font-size: 14px;
-  padding: 0;
+  padding: 10;
 }
